Fixed SonarQube errors and issues